--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -62,6 +62,6 @@ import "../styles/global.css";
 
     I used to do Gymnastics before but had to quit due to the gap in practice that occurred during the pandemic. Then I got into swimming later, I don't practice regularly for competitions as before but I do go swim on weekends sometimes. I think I'm a pretty much a packaged deal for triathlon, I'm thinking of doing Ironman next year, let's see how that goes.
 
-    What else, yes music. I play a classic folk instrument called [Pakhavaj](https://en.wikipedia.org/wiki/Pakhavaj) but I don't know if I could mention it now as I only occasionally practice it these days. But I love listing to music, it comes form the sound design aspect of filmmaking I guess. I like listening to instrumental music. I wish I'd known more instruments, Flute is one of my favorite and I'll pretty soon get my hands on a piano probably
+    What else, yes music. I play a classic folk instrument called [Pakhavaj](https://en.wikipedia.org/wiki/Pakhavaj) but I don't know if I could mention it now as I only occasionally practice it these days. But I love listening to music, it comes form the sound design aspect of filmmaking I guess. I like listening to instrumental music. I wish I'd known more instruments, Flute is one of my favorite and I'll pretty soon get my hands on a piano probably
   </div>
 </PageLayout>
