--- a/src/content/blogs/my-first-ever-cycling-race-experience.mdx
+++ b/src/content/blogs/my-first-ever-cycling-race-experience.mdx
@@ -38,7 +38,11 @@ So I had plugged everything on charge in the night phone, cam, powerbank, protei
 
 While I was waiting for the bus, yes you could take your cycles in the bus as luggage (well at least in the morning hours when there's no rush) we learned that earlier when me and Ayush previously went to train (we'll not technically train but to tour and checkout as one of our cycles was a non-gear) on the actual event track, so yes where was I yes so while I was waiting for bus my phone rang it was my friend Atharva from whom I'd requested to borrow his bottle holder mount as we'd also learned earlier that one bottle wasn't going to be enough.
 
-He had just woke up but still within 10 mins he arrived at the stop and we got it mounted, we managed to dent the frame a little bit during the process, I felt sad but I immediately remembered my uncle's quote from when we went on a coastal ride, btw I got some very cool shots there, find it [here](https://photos.app.goo.gl/maEVeqTvKKeTA3j29). he tore a hole in his helmet to fit his GoPro's mic, I would've never done that, I tend to get very attached to things, heck I literally cried when my PC's motherboard died. He said "the things are for us and we are not for things", remembering that helped reduce the pain a little bit.
+He had just woke up but still within 10 mins he arrived at the stop and we got it mounted, we managed to dent the frame a little bit during the process, I felt sad but I immediately remembered my uncle's quote from when we went on a coastal ride, btw I got some very cool shots there, find it [here](https://photos.app.goo.gl/maEVeqTvKKeTA3j29). he tore a hole in his helmet to fit his GoPro's mic, I would've never done that, I tend to get very attached to things, heck I literally cried when my PC's motherboard died. He said  
+
+> the things are for us and we are not for things
+
+remembering that helped reduce the pain a little bit.
 
 Quickly enough another bus came and we parted our ways by saluting as the bus began moving, yes we don't wave hands we salute that's just us.
 
@@ -90,7 +94,7 @@ THANK GOD THE CAM WASN'T MOUNTED!
 
 MY BIKE IS NOT ON AUTO HEAL LIKE ME THIS WOULD COST ME FORTUNE IF SOMETHING GETS DAMAGED!
 
-WILL I BE OUT OF THE RACE!!!
+WILL I BE OUT OF THE RACE?!!!
 
 Finally, friction did its thing and (a) came to a zero, I was laying down there struggling to get up, somehow I managed to stand up on both my feets, I began to assess the situation, my left side of the body was completely scraped but more than that the bike had taken some as well and the chain had damaged, my biggest fear was will I be able to continue the race. I couldn't see no one till far.
 
@@ -116,7 +120,7 @@ I continued paddling just waiting in the hopes to see a chequer soon, a support 
 
 ### The Finish Line
 
-AND FINALLY, finally I saw the crew at the horizon waiting at the finish line cheering me up as I moved closer to the finish line, pictures been taken and drone and all the glory stuff, I did the classic Thank You bow as I crossed the finish line and with that It was done, I cannot express the happiness in words when you finally finish something it was something out of the world.
+AND FINALLY, finally I saw the crew at the horizon cheering me up as I moved closer to the finish line, pictures been taken and drone and all the glory stuff, I did the classic Thank You bow as I crossed the finish line and with that It was done, I cannot express the happiness in words when you finally finish something it was something out of the world.
 
 The staff quickly noticed the injuries and I was immediately assisted by the medical team, I learned while they were dressing up my wounds that few had to call for ambulances. It's a dangerous sport man, I was aided and asked to rest, now let's come to the primary property of a competition.
 
@@ -132,7 +136,7 @@ There were many Y-splits and most of the times volunteers would be present to gu
 
 I'm not complaining or justifying here, hey you see the title it says "Experience". I didn't say anything to anyone there either. I'm not a complain booth. Besides it was not a qualifier or staked one.
 
-Also this was BAF's first ever event about cycling so there were few mismanagements which they confirmed will be taken as learnings and feedbacks to make the next one more successful.
+Also this was BAF's first ever event about cycling so there were a few mismanagements which they confirmed will be taken as learnings and feedbacks to make the next one more successful.
 
 So yes I came in 5th overall out of 53 riders and 4th in my age category 18-35, but hey, considering the riders I was competing against and the gears that they had I am actually proud of myself. So did I win the race? No, but I won my own by actually finishing and by standing up again and not giving up when I had crashed.
 
@@ -146,7 +150,7 @@ When you have a purpose nothing stopping you blud.
 
 There were many lessons I learned from this experience but most importantly I had so much fun. Wayy too much fun.
 
-Will I ever do it again? Yes, gladly, I guess I am a masochist and a sociopath after all :)
+Will I ever do it again? Yes, gladly, I guess I am a masochist and a psychopath after all :)
 
 ---
 
