--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -39,7 +39,7 @@ import "../styles/global.css";
 
     There were no direct (formal) entry options directly after 10th, you have to have at least completed your 12th to pursue a formal bachelors. I was never interested in competitive stuff so I opted for a Computer Science Diploma after my 10th as I also had passion for tech with a thought that I'll switch streams after the diploma also satisfying the criteria.
 
-    During the period, whenever I would get the opportunity I would make something, be it for personal project showreels, events I'm organizing, or just freelancing sometimes. [here's a logo reveal motion graphic I created for a startup during at DISQ](https://www.linkedin.com/posts/nikhildrajput_logo-reveal-activity-7086214936296591361-J3Nl)
+    During the period, whenever I would get the opportunity I would make something, be it for personal project showreels, events I'm organizing, podcasts, or just freelancing sometimes. [here's a logo reveal motion graphic I created for a startup during at DISQ](https://www.linkedin.com/posts/nikhildrajput_logo-reveal-activity-7086214936296591361-J3Nl)
 
     However, post diploma I got slipped into Engineering, there were many factors surrounding it, I'd gotten more into tech during my diploma and giving it a broader thought, <mark>Science is the only true predictive model about the universe, everything else is just a human created framework. Technology has constantly advanced humanity, not that there's any absolute need for it, we'd still be able to live normally, close to the nature like other species, without any of the inventions humankind has ever created. But hey, thats the thrill of it right! Exploring the potential of what human intelligence can achieve.</mark>
     And I stepped into Engineering with the thought that I'll study and be able to contribute more meaningfully with this one life that I've got. I know it sounds too philosophical, thats why I sometimes wonder if theres any meaning to it all and should we just have fun and do whatever we enjoy doing at the moment.
@@ -58,10 +58,17 @@ import "../styles/global.css";
 
     ## Other things
 
-    I wouldn't call myself an avid reader but I've started to read more often these days, with the Harari's Sapiens series and Walter Isaacson's biographies being my favorites. 
+    I wouldn't call myself an avid reader but I've started to read more often these days, with the Harari's Sapiens series and Walter Isaacson's biographies being my favorites.
 
     I used to do Gymnastics before but had to quit due to the gap in practice that occurred during the pandemic. Then I got into swimming later, I don't practice regularly for competitions as before but I do go swim on weekends sometimes. I think I'm a pretty much a packaged deal for triathlon, I'm thinking of doing Ironman next year, let's see how that goes.
 
-    What else, yes music. I play a classic folk instrument called [Pakhavaj](https://en.wikipedia.org/wiki/Pakhavaj) but I don't know if I could mention it now as I only occasionally practice it these days. But I love listening to music, it comes form the sound design aspect of filmmaking I guess. I like listening to instrumental music. I wish I'd known more instruments, Flute is one of my favorite and I'll pretty soon get my hands on a piano probably
+    What else, yes music. I play a classic folk instrument called [Pakhavaj](https://en.wikipedia.org/wiki/Pakhavaj) but I don't know if I could mention it now as I only occasionally practice it these days. But I love listening to music, it comes form the sound design aspect of filmmaking I guess. I enjoy listening to instrumental music. I wish I'd known more instruments, Flute is one of my favorite and I'll pretty soon get my hands on a piano probably
+
+    <br />
+
+    _Finally here's me doing a backflip with my friend as an outro._
+
+    ![Backflip](/images/backflip.gif)
+
   </div>
 </PageLayout>
