--- a/src/content/blogs/my-first-ever-cycling-race-experience.mdx
+++ b/src/content/blogs/my-first-ever-cycling-race-experience.mdx
@@ -157,3 +157,5 @@ Will I ever do it again? Yes, gladly, I guess I am a masochist and a psychopath 
 > I really appreciate you taking the time to read this, feel free to shoot me at hi@shriram.dev if you have any feedbacks :)
 
 Thanks. Byeeeeeee!
+
+![Outro](https://xykykfwzru.ufs.sh/f/wbqWf9ayBsFLW9NgxKdMRgyNWpHBE2TcQidewushrvOZPFD1)
