fix grammatical mistake

--- a/src/content/blogs/my-first-ever-cycling-race-experience.mdx
+++ b/src/content/blogs/my-first-ever-cycling-race-experience.mdx
@@ -96,7 +96,7 @@ MY BIKE IS NOT ON AUTO HEAL LIKE ME THIS WOULD COST ME FORTUNE IF SOMETHING GETS
 
 WILL I BE OUT OF THE RACE?!!!
 
-Finally, friction did its thing and (a) came to a zero, I was laying down there struggling to get up, somehow I managed to stand up on both my feets, I began to assess the situation, my left side of the body was completely scraped but more than that the bike had taken some as well and the chain had damaged, my biggest fear was will I be able to continue the race. I couldn't see no one till far.
+Finally, friction did its thing and (a) came to a zero, I was laying down there struggling to get up, somehow I managed to stand up on both my feet, I began to assess the situation, my left side of the body was completely scraped but more than that the bike had taken some as well and the chain had damaged, my biggest fear was will I be able to continue the race. I couldn't see no one till far.
 
 I drank some water from the bottle I was carrying and I just stood up there for a while. I was just remembering all the people who've helped, believed and wished me best, it would all be for nothing and also my mother won't let me participate in any further events. The face of the two of my biggest idols snapped in front of me, Rock Lee and Naruto. I KNOW THEY ARE FICTIONAL CHARACTERS, SHUT UP!
 
