--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -66,7 +66,7 @@ import "../styles/global.css";
 
     <br />
 
-    _Finally here's me doing a backflip with my friend as an outro._
+    _Finally, here's me doing a backflip with my friend as an outro._
 
     ![Backflip](/images/backflip.gif)
 
