--- a/src/content/blogs/my-first-ever-cycling-race-experience.mdx
+++ b/src/content/blogs/my-first-ever-cycling-race-experience.mdx
@@ -6,6 +6,9 @@ authors:
     - name: "Shriram Khandbahale"
       url: "https://shriram.dev"
 tags: ["cycling", "fitness", "health", "racing", "biking", "adventure"]
+banner:
+    url: "https://xykykfwzru.ufs.sh/f/wbqWf9ayBsFLl2Y2cXo6f1o1v1gk1eX1o0X1Y8eX3qvQY6GQ"
+    alt: "Shriram Khandbahale with RC120"
 ---
 
 On 29th Nov 2025 I had the incredible opportunity to participate in a gravel race organised by BAF (Bhonsala Adventure Foundation) and Man did I had the time of my life (on the descents at least, on the ascents you start to question your life decisions, It's a complete spiritual journey)
