--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,9 +1,15 @@
 import Header from "../components/Header.astro";
 import PageLayout from "../layouts/PageLayout.astro";
 import Subscribe from "../components/Subscribe.astro";
-import "../styles/global.css";
 
-<PageLayout title="Shriram Khandbahale">
+<PageLayout
+  description="My personal portfolio and blog website."
+  tags={["Shriram Khandbahale", "shriram.dev"]}
+  banner={{
+    url: "/favicon.ico",
+    alt: "Shriram Khandbahale",
+  }}
+>
   <div className="prose lg:prose-xl min-w-full text-gray-950">
     # Shriram Khandbahale
 
@@ -33,7 +39,7 @@ import "../styles/global.css";
 
     During the pandemic when I was in my 10th grade, I started posting videos on YouTube of me teaching Maths and Science concepts,
 
-    here's an embarring demo: [Me explaining what is a CPU](https://drive.google.com/file/d/14NkhWJErP8cARp9ibhuW2UFuT2myza0k/view)
+    here's an embarrassing demo: [Me explaining what is a CPU](https://drive.google.com/file/d/14NkhWJErP8cARp9ibhuW2UFuT2myza0k/view)
 
     that was when I developed a new hobby of making videos. I used to love the process of shooting and editing videos, So much that I literally got consumed, I stated learning about film production - cinematography, editing, color grading, sound design etc. I used to spend hours learning about these topics from YouTube and other platforms. We used to have a family movie night every saturday, and I loved movies. I decided this is what I want to do.
 
@@ -60,7 +66,7 @@ import "../styles/global.css";
 
     I wouldn't call myself an avid reader but I've started to read more often these days, with the Harari's Sapiens series and Walter Isaacson's biographies being my favorites.
 
-    I used to do Gymnastics before but had to quit due to the gap in practice that occurred during the pandemic. Then I got into swimming later, I don't practice regularly for competitions as before but I do go swim on weekends sometimes. I think I'm a pretty much a packaged deal for triathlon, I'm thinking of doing Ironman next year, let's see how that goes.
+    I used to do Gymnastics before but had to quit due to the gap in practice that occurred during the pandemic. Then I got into swimming later, I don't practice regularly for competitions as before but I do go swim on weekends sometimes. I think I'm pretty much a packaged deal for triathlon, I'm thinking of doing Ironman next year, let's see how that goes.
 
     What else, yes music. I play a classic folk instrument called [Pakhavaj](https://en.wikipedia.org/wiki/Pakhavaj) but I don't know if I could mention it now as I only occasionally practice it these days. But I love listening to music, it comes form the sound design aspect of filmmaking I guess. I enjoy listening to instrumental music. I wish I'd known more instruments, Flute is one of my favorite and I'll pretty soon get my hands on a piano probably
 
