--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -6,7 +6,7 @@ import Subscribe from "../components/Subscribe.astro";
   description="My personal portfolio and blog website."
   tags={["Shriram Khandbahale", "shriram.dev"]}
   banner={{
-    url: "/favicon.ico",
+    url: "/favicon.svg",
     alt: "Shriram Khandbahale",
   }}
 >
