add filmmaking image

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -52,7 +52,9 @@ import Subscribe from "../components/Subscribe.astro";
 
     Sorry for that lecture, I get distracted sometimes.
 
-     But I know I'll somehow combine both of my passions in future, [WDI](https://sites.disney.com/waltdisneyimagineering) I'm looking at you. I still love filmmaking, although I haven't worked on anything since a long time, so I'm planning to make a short documentary film about cycling for fun as soon as these EXAMS get over.
+    But I know I'll somehow combine both of my passions in future, [WDI](https://sites.disney.com/waltdisneyimagineering) I'm looking at you. I still love filmmaking, although I haven't worked on anything since a long time, so I'm planning to make a short documentary film about cycling for fun as soon as these EXAMS get over.
+
+    ![Filmmaking](/images/filmmaking.png)
 
     ## Cycling
 
