update banner dimensions

--- a/src/content/blogs/my-first-ever-cycling-race-experience.mdx
+++ b/src/content/blogs/my-first-ever-cycling-race-experience.mdx
@@ -9,6 +9,8 @@ tags: ["cycling", "fitness", "health", "racing", "biking", "adventure"]
 banner:
     url: "https://xykykfwzru.ufs.sh/f/wbqWf9ayBsFLs7sYlRwlcGu7tYiXgrF2fnhCeOoQ6zxAyT3j"
     alt: "Shriram Khandbahale with RC120"
+    height: 637
+    width: 477
 ---
 
 On 29th Nov 2025 I had the incredible opportunity to participate in a gravel race organised by BAF (Bhonsala Adventure Foundation) and Man did I had the time of my life (on the descents at least, on the ascents you start to question your life decisions, It's a complete spiritual journey)
