--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -8,6 +8,8 @@ import Subscribe from "../components/Subscribe.astro";
   banner={{
     url: "/favicon.svg",
     alt: "Shriram Khandbahale",
+    height: 512,
+    width: 512,
   }}
 >
   <div className="prose lg:prose-xl min-w-full text-gray-950">
