--- a/src/content/blogs/my-first-ever-cycling-race-experience.mdx
+++ b/src/content/blogs/my-first-ever-cycling-race-experience.mdx
@@ -53,8 +53,6 @@ Quickly enough another bus came and we parted our ways by saluting as the bus be
 
 Anyways I reached Trambakeshwar right on time and the randevu point was just a km away from the stop but it felt like crossing the entire Arctic subcontinent due to the dawn cold. I reached the location, the staff and few of the participants were already there and others on their way. I immediately got humbled and discouraged after seeing the bikes, all carbon. There was no chance.
 
-![Carbon Bikes](https://xykykfwzru.ufs.sh/f/wbqWf9ayBsFLbgQxLN3N6JELf9DYa7WgmtyGHUpov8cdjQuA)
-
 I got myself checked-in by submitting the medical report and "If you die it's not on us" form. We were given a breakfast kit, jerseys and chest numbers. They didn't had a small size jersey left so I had to settle for a M sized one, although they had asked for T-shirt sizes earlier but anyways I'll let it slide.
 
 I also reunited with some of the staff members after a very long time. We finished our breakfast and gathered for the inauguration speech and instructions, One thing I liked about BAF they repeatedly mentioned that
@@ -72,6 +70,9 @@ Everyone lined up, my heart started pumping faster with butterflies in my stomac
 10...9...8...7...6...5...4...3...2...1 and the flag raised with horns and claps.
 
 I immediately began pedalling in the lead as per my strategy, there was no point in drafting for 50. Stay in the first peloton and attack when it counts, the golden rule. I kept in the lead for a while but soon enough a breakout of three riders caught up, my immediate reflex was keep drafting with this group and launch an attack in last few kilometers, but it's not that easy as it sounds, I tried drafting behind them but couldn't keep up and was dropped, I didn't push rightway as I knew I'll need energy reserve for later, soon enough another 3 rider group caught up and now I really started to get nervous, "how am I not able to keep up", I wanted to blame my bike but deep down inside I knew it was me, I lacked proper training and these people who I was competing with were seasoned athletes, I drafted with them for a while but again got dropped on an ascent, that's when I comforted my self with "Okay this is a little too ambitious, you don't directly win your first race, what am I Remco?!".
+
+![Descent](https://xykykfwzru.ufs.sh/f/wbqWf9ayBsFLJfpp86bTkM8O1r5XihmcHzRLBpVwuqJGZbPy)
+
 
 ### The First Descent
 
