--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -47,7 +47,8 @@ import Subscribe from "../components/Subscribe.astro";
 
     There were no direct (formal) entry options directly after 10th, you have to have at least completed your 12th to pursue a formal bachelors. I was never interested in competitive stuff so I opted for a Computer Science Diploma after my 10th as I also had passion for tech with a thought that I'll switch streams after the diploma also satisfying the criteria.
 
-    During the period, whenever I would get the opportunity I would make something, be it for personal project showreels, events I'm organizing, podcasts, or just freelancing sometimes. [here's a logo reveal motion graphic I created for a startup during at DISQ](https://www.linkedin.com/posts/nikhildrajput_logo-reveal-activity-7086214936296591361-J3Nl)
+    During the period, whenever I would get the opportunity I would make something, be it for personal project showreels, events I'm organizing, podcasts, or just freelancing sometimes. [here's](https://www.linkedin.com/posts/nikhildrajput_logo-reveal-activity-7086214936296591361-J3Nl) a logo reveal motion graphic I created for a startup during at DISQ
+    ![Filmmaking](/images/filmmaking.png)
 
     However, post diploma I got slipped into Engineering, there were many factors surrounding it, I'd gotten more into tech during my diploma and giving it a broader thought, <mark>Science is the only true predictive model about the universe, everything else is just a human created framework. Technology has constantly advanced humanity, not that there's any absolute need for it, we'd still be able to live normally, close to the nature like other species, without any of the inventions humankind has ever created. But hey, thats the thrill of it right! Exploring the potential of what human intelligence can achieve.</mark>
     And I stepped into Engineering with the thought that I'll study and be able to contribute more meaningfully with this one life that I've got. I know it sounds too philosophical, thats why I sometimes wonder if theres any meaning to it all and should we just have fun and do whatever we enjoy doing at the moment.
@@ -56,7 +57,6 @@ import Subscribe from "../components/Subscribe.astro";
 
     But I know I'll somehow combine both of my passions in future, [WDI](https://sites.disney.com/waltdisneyimagineering) I'm looking at you. I still love filmmaking, although I haven't worked on anything since a long time, so I'm planning to make a short documentary film about cycling for fun as soon as these EXAMS get over.
 
-    ![Filmmaking](/images/filmmaking.png)
 
     ## Cycling
 
@@ -76,7 +76,7 @@ import Subscribe from "../components/Subscribe.astro";
 
     <br />
 
-    _Finally, here's me doing a backflip with my friend as an outro._
+    _Finally, here's me doing a flip with my friend omkar as an outro._
 
     ![Backflip](/images/backflip.gif)
 
