--- a/src/pages/projects.mdx
+++ b/src/pages/projects.mdx
@@ -15,7 +15,7 @@ import PageLayout from "../layouts/PageLayout.astro";
 
     ## Bookies ERP System:
 
-    The Bookies Club or popularly known as Mumbai Bookies (with chapters in multiple cities) is India's largest reading community. An initiative started by [Shantanu Naidu](https://in.linkedin.com/in/shantanu-naidu), [Gargi Sandu](https://in.linkedin.com/in/gargi-sandu-a10b87a4), [Pritesh Singh](https://www.linkedin.com/in/pritesh-/) and team, with the aim of promoting and reviving the habit of reading in today's busy world. As part of my small contribution to this wonderful initiative, I developed a small lightweight ERP system to automate and streamline all the administrative tasks such as Bulk Emailing, Attendance tracking through QR based IDs, Member registration and management, Achievements tracking, etc.
+    The Bookies Club or originally known as Mumbai Bookies (with chapters expending to multiple cities) is India's largest reading community. An initiative by [Shantanu Naidu](https://in.linkedin.com/in/shantanu-naidu), [Gargi Sandu](https://in.linkedin.com/in/gargi-sandu-a10b87a4), [Pritesh Singh](https://www.linkedin.com/in/pritesh-/) and team, with the aim of promoting and reviving the habit of reading in today's busy world. As part of my small contribution to this wonderful initiative, I developed a small lightweight ERP system to automate and streamline all the administrative tasks such as Bulk Emailing, Attendance tracking through QR based IDs, Member registration and management, Achievements tracking, etc.
 
     ![Bookies Platform](https://xykykfwzru.ufs.sh/f/wbqWf9ayBsFLrG0W4V96kPzMH4ZNU8KbvTFAYcl0E5jyiBwx)
 
